@@ -35,6 +35,7 @@ javafx {
 }
 
 dependencies {
+    // Testing
     testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
 
@@ -44,17 +45,13 @@ dependencies {
     // Logback
     implementation("ch.qos.logback:logback-classic:1.4.7")
 
-    // GSON
-    implementation("com.google.code.gson:gson:2.10.1")
-
+    // Server
     //implementation("javax.servlet:javax.servlet-api:4.0.1")
 }
-
 
 test {
     useJUnitPlatform()
 }
-
 
 jlink {
     imageZip = project.file("${buildDir}/distributions/app-${javafx.platform.classifier}.zip")
@@ -76,3 +73,20 @@ jlink {
 jlinkZip {
     group = 'distribution'
 }
+
+jar {
+    doFirst {
+        def serviceDir = file("$buildDir/META-INF/services")
+        serviceDir.deleteDir()
+        serviceDir.mkdirs()
+    }
+
+    manifest {
+        attributes "Main-Class": "dev.sbytmacke.tokenhelper.AppMain"
+    }
+
+    // Include service files from the buildDir.
+    from fileTree(buildDir).matching { include 'META-INF/services/*' }
+}
+
+//java --module-path C:\Program Files\javafx-sdk-17.0.8\lib --add-modules javafx.controls,javafx.fxml -jar TokenHelper.jar
